--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,30 +369,27 @@ button:hover {
 .right-image-post {
     margin-top: 30px;
     padding-top: 30px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgba(250, 250, 250, 0.25);
 }
 
-.left-image img,
 .right-image img {
     border-radius: 5px;
 }
 
-.right-image-post h4,
-.left-image-post h4 {
+.right-image-post h4 {
     margin-top: 30px;
 }
 
-.right-image-post h5,
-.left-image-post h5 {
+.right-image-post h5 {
     margin-top: 10px;
 }
 
-.right-image-post p,
-.left-image-post p {
+.right-image-post p {
     margin-top: 20px;
 }
 
-.right-image-post .white-button,
-.left-image-post .white-button {
+.right-image-post .white-button {
     margin-top: 30px;
 }
 
