--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,7 +368,7 @@ button:hover {
 
 
 .right-image-post {
-    display: inline;
+    display: block;
     margin-top: 30px;
     padding-top: 30px;
     padding-bottom: 10px;
